--- a/index.html
+++ b/index.html
@@ -36,4 +36,33 @@
       padding-left: 1.2rem;
     }
     footer {
-      background: #f2
+      background: #f2f2f2;
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: 3rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>LumiNest</h1>
+    <p>Your wellbeing & early childhood development studio</p>
+  </header>
+
+  <section>
+    <h2>Welcome to LumiNest</h2>
+    <p>Creating digital experiences and educational games for children aged 2–6.</p>
+    <ul>
+      <li>Fun and educational content</li>
+      <li>Interactive games</li>
+      <li>Safe and nurturing environment</li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 2025 LumiNest. All rights reserved.
+  </footer>
+</body>
+</html>
