--- a/index.html
+++ b/index.html
@@ -1,116 +1,189 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LumiNest</title>
   <style>
+    :root {
+      --primary1: #CBAACB;
+      --primary2: #8D9C75;
+      --primary3: #CFB48A;
+      --secondary1: #FFF3B0;
+      --secondary2: #FFE4E1;
+      --secondary3: #D8E1FF;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #fffaf4;
+      background: var(--secondary2);
       color: #333;
+      line-height: 1.6;
     }
     header {
-      background: #ffd06b;
+      background: var(--primary1);
       padding: 2rem;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
     }
     header p {
       font-size: 1.2rem;
       margin-top: 0.5rem;
     }
+    nav {
+      text-align: center;
+      margin-top: 1rem;
+    }
+    nav button {
+      background: var(--primary3);
+      border: none;
+      padding: 0.5rem 1rem;
+      margin: 0.2rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 6px;
+      color: #fff;
+    }
     section {
       padding: 3rem 1.5rem;
-      max-width: 800px;
+      max-width: 880px;
       margin: auto;
     }
     section h2 {
-      color: #e68a00;
+      color: var(--primary2);
+      font-size: 1.8rem;
     }
-    ul {
-      padding-left: 1.2rem;
+    .card {
+      background: #fff;
+      border-radius: 1rem;
+      padding: 2rem;
+      margin: 1.5rem 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
     footer {
-      background: #f2f2f2;
+      background: var(--secondary3);
       text-align: center;
-      padding: 1rem 0;
+      padding: 2rem 1rem;
       font-size: 0.9rem;
       color: #666;
       margin-top: 3rem;
     }
-
-    /* New styles for cards */
-    .cards-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.5rem;
-      max-width: 900px;
-      margin: 2rem auto;
+    .cta {
+      text-align: center;
+      margin-top: 3rem;
     }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 1.5rem;
-      flex: 1 1 250px; /* flexible width, min 250px */
-      max-width: 300px;
-      transition: transform 0.3s ease;
+    .cta a {
+      background: var(--primary2);
+      color: white;
+      padding: 1rem 2rem;
+      border-radius: 1rem;
+      text-decoration: none;
+      font-size: 1.2rem;
     }
-    .card:hover {
-      transform: translateY(-8px);
+    .language-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
     }
-    .card h3 {
-      margin-top: 0;
-      color: #e68a00;
+    .language-toggle button {
+      background: var(--secondary1);
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
     }
-    .card p {
-      color: #555;
+    input, textarea, button {
+      font-family: inherit;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+      width: 100%;
+      padding: 0.6rem;
+      border-radius: 0.5rem;
+      border: 1px solid #ccc;
+    }
+    button[type="submit"] {
+      background: var(--primary2);
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    ul {
+      padding-left: 1.2rem;
     }
   </style>
 </head>
 <body>
+  <div class="language-toggle">
+    <button onclick="toggleLanguage()">PT ↔ EN</button>
+  </div>
+
   <header>
     <h1>LumiNest</h1>
     <p>Your wellbeing & early childhood development studio</p>
+    <p><em>A women-led initiative supporting families with autistic children</em></p>
   </header>
 
   <section>
-    <h2>Welcome to LumiNest</h2>
-    <p>Creating digital experiences and educational games for children aged 2–6.</p>
-    <ul>
-      <li>Fun and educational content</li>
-      <li>Interactive games</li>
-      <li>Safe and nurturing environment</li>
-    </ul>
-  </section>
+    <div class="card">
+      <h2>For Parents First</h2>
+      <p>We know the early years with an autistic child can feel overwhelming and beautiful at once. LumiNest offers therapeutic, research-backed digital tools designed specifically for parents raising children between the ages of 2 and 6. Our mission is to empower, guide, and comfort — every step of the way.</p>
+    </div>
 
-  <!-- New cards section -->
-  <section>
-    <h2>Our Features</h2>
-    <div class="cards-container">
-      <div class="card">
-        <h3>Interactive Games</h3>
-        <p>Engage children with fun and educational digital games designed for early development.</p>
-      </div>
-      <div class="card">
-        <h3>Safe Environment</h3>
-        <p>We prioritize safety and nurturing experiences for children and families.</p>
-      </div>
-      <div class="card">
-        <h3>Expert Guidance</h3>
-        <p>Our content is created by early childhood development specialists.</p>
-      </div>
+    <div class="card">
+      <h2>Why LumiNest?</h2>
+      <ul>
+        <li>Designed with love and science for early autism support</li>
+        <li>Gentle, interactive mini-games for children</li>
+        <li>Calm design, tested for sensory comfort</li>
+        <li>First women-led initiative of its kind in the UK</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h2>Our Vision</h2>
+      <p>We’re more than a digital tool. LumiNest is a wellbeing studio, created with therapists, parents, and educators. We work to ensure that every child — and every parent — feels safe, seen, and supported.</p>
+    </div>
+
+    <div class="card">
+      <h2>Blog & Updates</h2>
+      <p>Coming soon: insights into our app design, autism research, therapeutic strategies, and parenting experiences. Join our journey!</p>
+    </div>
+
+    <div class="card">
+      <h2>Newsletter</h2>
+      <form>
+        <label for="email">Sign up for monthly updates:</label><br />
+        <input type="email" id="email" name="email" placeholder="Your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+
+    <div class="card">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" name="name" placeholder="Your name" required><br />
+        <input type="email" name="email" placeholder="Your email" required><br />
+        <textarea name="message" placeholder="Your message" rows="4" required></textarea><br />
+        <button type="submit">Send</button>
+      </form>
+    </div>
+
+    <div class="cta">
+      <a href="#">Download Our App</a>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 LumiNest. All rights reserved.
+    &copy; 2025 LumiNest. All rights reserved. Women-led. Therapeutically designed in the UK.
   </footer>
+
+  <script>
+    function toggleLanguage() {
+      alert("Language toggle functionality coming soon.");
+    }
+  </script>
 </body>
 </html>
