--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <style>
     :root {
       --primary1: #CBAACB;
-      --primary2: #8D9C75;
+      --primary2: #8D9C75; /* azul da paleta */
       --primary3: #CFB48A;
       --highlight: #CBAACB;
       --secondary1: #FFF3B0;
       --secondary2: #FFE4E1;
       --secondary3: #D8E1FF;
+      --background-footer: #FFFDEF;
     }
     body {
-      margin: 0;
+      margin-left: 65px;
+      margin-right: 65px;
+      box-sizing: border-box;
       font-family: 'Roboto Condensed', sans-serif;
       background: #FFFDEF;
       color: #333;
@@ -29,121 +32,250 @@
     }
     header {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 0 1rem 2rem 1rem;
       margin: auto;
       max-width: 1000px;
     }
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
+    header img.logo {
+      max-width: 150px;
+      margin: 50px auto 1rem auto;
+      display: block;
     }
     header p {
       font-size: 1.2rem;
-      margin: 0.5rem 0;
+      margin: 0;
+      line-height: 1.3;
     }
-    .language-toggle {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-    }
-    .language-toggle button {
-      background: var(--secondary1);
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-    }
-    section {
-      padding: 2rem 1.5rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .intro-section, .mission-section {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 2rem;
-      margin-bottom: 3rem;
-    }
-    .intro-section img, .mission-section img {
-      max-width: 100%;
-      flex: 1 1 40%;
-      border-radius: 1rem;
-    }
-    .intro-text, .mission-text {
-      flex: 1 1 55%;
-    }
-    h2 {
-      color: var(--primary2);
-      margin-bottom: 0.5rem;
-    }
-    .events-list ul {
-      list-style-type: disc;
-      padding-left: 1.5rem;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.75rem;
-      margin-top: 1rem;
-    }
-    .form-row {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      justify-content: center;
-    }
-    input, textarea {
-      padding: 0.75rem;
+    header p.emphasis {
       font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
-      width: 100%;
-      max-width: 400px;
+      margin-top: 4px;
+      margin-bottom: 40px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 1.3;
     }
-    button[type="submit"] {
-      background: var(--highlight);
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      padding: 0.5rem 1.5rem;
+    .header-bottom {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+    .header-bottom .phone-container {
+      position: relative;
+      width: 180px;
+      height: 180px;
+      flex-shrink: 0;
       border-radius: 1rem;
+      overflow: hidden;
     }
-    .cta {
-      text-align: center;
-      margin: 2rem 0;
+    .header-bottom img.photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 1rem;
+      display: block;
     }
-    .cta a {
+    /* Tela azul com texto "new app!" sobreposta no celular */
+    .screen-overlay {
+      position: absolute;
+      top: 15%;
+      left: 28%;
+      width: 44%;
+      height: 65%;
+      background-color: var(--primary2);
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-weight: bold;
+      font-size: 1.1rem;
+      user-select: none;
+      pointer-events: none;
+      text-transform: uppercase;
+      font-family: 'Roboto Condensed', sans-serif;
+    }
+    .cta-text {
+      max-width: 400px;
+      text-align: left;
+    }
+    .cta-text p {
+      font-weight: 600;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+    .cta-text a {
       background: var(--highlight);
       color: white;
       padding: 1rem 2rem;
       border-radius: 1rem;
       text-decoration: none;
       font-size: 1.2rem;
+      display: inline-block;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .cta-text a:hover {
+      background: #b995c0;
+    }
+    section {
+      padding: 2rem 1.5rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .intro-section {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 1.5rem;
+      margin-bottom: 3rem;
+      justify-content: space-between;
+    }
+    .intro-text {
+      flex: 1 1 55%;
+      max-width: 60%;
+    }
+    .intro-section img {
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 1rem;
+      flex-shrink: 0;
+      order: 2;
+    }
+    .mission-section {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .mission-section h2 {
+      color: var(--primary2);
+      margin-bottom: 0.5rem;
+    }
+    .events-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      margin-bottom: 3rem;
+      justify-content: center;
+      text-align: center;
+    }
+    .events-list h2 {
+      grid-column: 1 / -1;
+      color: var(--primary2);
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    .event-card {
+      background: var(--secondary1);
+      padding: 1rem;
+      border-radius: 1rem;
+      font-weight: 600;
+    }
+    .event-card:nth-child(2) {
+      background: var(--secondary2);
+    }
+    .event-card:nth-child(3) {
+      background: var(--secondary3);
+    }
+    section.contact {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .contact-info {
+      font-size: 1.1rem;
+      margin-top: 0.5rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    .contact-info a {
+      color: var(--primary2);
+      text-decoration: none;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 0.3rem;
+      font-size: 1.1rem;
+    }
+    .contact-info a svg {
+      width: 20px;
+      height: 20px;
+      fill: var(--primary2);
+    }
+    .newsletter {
+      margin-bottom: 5rem;
+      text-align: center;
+    }
+    .newsletter form {
+      display: inline-flex;
+      gap: 0.5rem;
+      max-width: 100%;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: nowrap;
+    }
+    .newsletter input[type="email"] {
+      flex-grow: 1;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 1rem;
+      max-width: 600px;
+      min-width: 0;
+    }
+    .newsletter button[type="submit"] {
+      background: var(--highlight);
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      padding: 0.75rem 1.5rem;
+      border-radius: 1rem;
+      font-size: 1rem;
+      flex-shrink: 0;
+      min-width: 120px;
+      transition: background-color 0.3s ease;
+    }
+    .newsletter button[type="submit"]:hover {
+      background: #b995c0;
     }
     footer {
-      background: var(--secondary3);
+      background: var(--background-footer);
       text-align: center;
       padding: 2rem 1rem;
       font-size: 0.9rem;
       color: #666;
-      margin-top: 3rem;
+      margin-top: 5rem;
+    }
+    footer a {
+      color: #666;
+      text-decoration: none;
+      margin: 0 0.5rem;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="language-toggle">
-    <button onclick="toggleLanguage()">PT ↔ EN</button>
-  </div>
-
   <header>
-    <h1>LumiNest</h1>
+    <img class="logo" src="https://img1.wsimg.com/isteam/ip/d97c1e45-b522-4f18-a8fe-dfba5028c947/Group%2088.png" alt="LumiNest Logo" />
     <p>Your wellbeing & early childhood development studio</p>
-    <p><em>A women-led initiative supporting families with autistic children</em></p>
-    <div class="cta">
-      <a href="#">🎉 Our App is Launching — Download Now</a>
+    <p class="emphasis">A women-led initiative supporting families with autistic children</p>
+
+    <div class="header-bottom">
+      <div class="phone-container">
+        <img
+          class="photo"
+          src="https://images.pexels.com/photos/14465802/pexels-photo-14465802.jpeg"
+          alt="Woman holding phone"
+        />
+        <div class="screen-overlay">new app!</div>
+      </div>
+      <div class="cta-text">
+        <p>We are excited to announce the launch of our app!</p>
+        <a href="#">Download Now!</a>
+      </div>
     </div>
   </header>
 
@@ -152,45 +284,35 @@
       <h2>For Parents First</h2>
       <p>We know the early years with an autistic child can feel overwhelming and beautiful at once. LumiNest offers therapeutic, research-backed digital tools designed specifically for parents raising children between the ages of 2 and 6.</p>
     </div>
-    <img src="https://images.pexels.com/photos/6338775/pexels-photo-6338775.jpeg?_gl=1*16pfisy*_ga*NDQzNjA2NTkxLjE3NDcwNzE3MzA.*_ga_8JE65Q40S6*czE3NTQxMzM5NjkkbzMkZzEkdDE3NTQxMzQwMjIkajckbDAkaDA." alt="Mother and child talking">
+    <img src="https://images.pexels.com/photos/6338775/pexels-photo-6338775.jpeg?_gl=1*16pfisy*_ga*NDQzNjA2NTkxLjE3NDcwNzE3MzA.*_ga_8JE65Q40S6*czE3NTQxMzM5NjkkbzMkZzEkdDE3NTQxMzQwMjIkajckbDAkaDA." alt="Mother and child talking" />
   </section>
 
   <section class="mission-section">
-    <img src="https://images.pexels.com/photos/8386182/pexels-photo-8386182.jpeg?_gl=1*wjri9x*_ga*NDQzNjA2NTkxLjE3NDcwNzE3MzA.*_ga_8JE65Q40S6*czE3NTQxMzM5NjkkbzMkZzEkdDE3NTQxMzQzMTEkajYwJGwwJGgw" alt="Autism support illustration">
-    <div class="mission-text">
-      <h2>Our Mission</h2>
-      <p>To empower, guide, and comfort families through accessible digital experiences — supporting neurodiversity with love, care, and science.</p>
-    </div>
+    <h2>Our Mission</h2>
+    <p>To empower, guide, and comfort families through accessible digital experiences — supporting neurodiversity with love, care, and science.</p>
   </section>
 
   <section class="events-list">
     <h2>Events</h2>
-    <ul>
-      <li>Webinar: Sensory Play at Home – Sept 5</li>
-      <li>Workshop: Communication Strategies – Oct 12</li>
-      <li>Virtual Q&A with Therapists – Nov 9</li>
-    </ul>
+    <div class="event-card">Webinar: Sensory Play at Home – Sept 5</div>
+    <div class="event-card">Workshop: Communication Strategies – Oct 12</div>
+    <div class="event-card">Virtual Q&A with Therapists – Nov 9</div>
   </section>
 
   <section class="contact">
     <h2>Contact Us</h2>
-    <form>
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="email" placeholder="Your email" required>
-      <textarea name="message" rows="4" placeholder="Your message" required></textarea>
-      <div class="form-row">
-        <button type="submit">Send</button>
-      </div>
-    </form>
+    <div class="contact-info">
+      <a href="mailto:contact@weareluminest.co.uk" aria-label="Email contact@weareluminest.co.uk">📧 contact@weareluminest.co.uk</a>
+      <a href="https://instagram.com/weareluminest" target="_blank" rel="noopener" aria-label="Instagram @weareluminest">📸 @weareluminest</a>
+      <a href="https://linkedin.com/company/weareluminest" target="_blank" rel="noopener" aria-label="LinkedIn LumiNest">🔗 LumiNest</a>
+    </div>
   </section>
 
   <section class="newsletter">
     <h2>Join Our Newsletter</h2>
     <form>
-      <div class="form-row">
-        <input type="email" name="newsletter" placeholder="Your email" required>
-        <button type="submit">Subscribe</button>
-      </div>
+      <input type="email" name="newsletter" placeholder="Your email" required />
+      <button type="submit">Subscribe</button>
     </form>
   </section>
 
@@ -198,11 +320,5 @@
     &copy; 2025 LumiNest. All rights reserved. Women-led. Therapeutically designed in the UK. <br />
     <a href="#">Privacy Policy</a> | <a href="#">Terms</a> | Follow us on <a href="#">Instagram</a> and <a href="#">LinkedIn</a>
   </footer>
-
-  <script>
-    function toggleLanguage() {
-      alert("Language toggle functionality coming soon.");
-    }
-  </script>
 </body>
 </html>
