--- a/index.html
+++ b/index.html
@@ -5,320 +5,343 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LumiNest</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Chewy&family=Roboto+Condensed&display=swap');
+
     :root {
-      --primary1: #CBAACB;
-      --primary2: #8D9C75; /* azul da paleta */
-      --primary3: #CFB48A;
-      --highlight: #CBAACB;
-      --secondary1: #FFF3B0;
-      --secondary2: #FFE4E1;
-      --secondary3: #D8E1FF;
-      --background-footer: #FFFDEF;
+      --green: #8D9C75;
+      --background: #FFFDEF;
+      --event1: #FFF3B0;
+      --event2: #FFE4E1;
+      --event3: #D8E1FF;
     }
-    body {
-      margin-left: 65px;
-      margin-right: 65px;
+
+    /* Reset and base */
+    *, *::before, *::after {
       box-sizing: border-box;
+    }
+
+    body {
+      margin: 0 65px 0 65px;
       font-family: 'Roboto Condensed', sans-serif;
-      background: #FFFDEF;
+      background: var(--background);
       color: #333;
       line-height: 1.6;
     }
-    h1, h2, h3, h4 {
-      font-family: 'Roboto Condensed', sans-serif;
+
+    a {
+      text-decoration: none;
     }
-    p, ul, label, input, textarea, button {
-      font-family: Helvetica, sans-serif;
-    }
+
+    /* Header */
     header {
       text-align: center;
-      padding: 0 1rem 2rem 1rem;
-      margin: auto;
+      padding: 50px 1rem 2rem 1rem;
       max-width: 1000px;
+      margin: auto;
     }
+
     header img.logo {
       max-width: 150px;
-      margin: 50px auto 1rem auto;
-      display: block;
+      margin-bottom: 1rem;
     }
+
     header p {
       font-size: 1.2rem;
       margin: 0;
-      line-height: 1.3;
+      line-height: 1.2;
     }
-    header p.emphasis {
+
+    header p + p {
       font-size: 1rem;
-      margin-top: 4px;
-      margin-bottom: 40px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 1.3;
+      margin-top: 0;
+      color: #333;
     }
-    .header-bottom {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
-    .header-bottom .phone-container {
-      position: relative;
-      width: 180px;
-      height: 180px;
-      flex-shrink: 0;
-      border-radius: 1rem;
-      overflow: hidden;
-    }
-    .header-bottom img.photo {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 1rem;
-      display: block;
-    }
-    /* Tela azul com texto "new app!" sobreposta no celular */
-    .screen-overlay {
-      position: absolute;
-      top: 15%;
-      left: 28%;
-      width: 44%;
-      height: 65%;
-      background-color: var(--primary2);
-      border-radius: 12px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-weight: bold;
-      font-size: 1.1rem;
-      user-select: none;
-      pointer-events: none;
-      text-transform: uppercase;
-      font-family: 'Roboto Condensed', sans-serif;
-    }
-    .cta-text {
-      max-width: 400px;
-      text-align: left;
-    }
-    .cta-text p {
-      font-weight: 600;
+
+    /* Intro text */
+    .intro-text {
+      max-width: 800px;
+      margin: 0 auto 3rem auto;
       font-size: 1.2rem;
+      line-height: 1.5;
+      text-align: center;
+      padding: 0 10px;
+    }
+
+    .intro-text .highlight-green {
+      font-family: 'Chewy', cursive;
+      color: var(--green);
+      font-weight: normal;
+      font-size: 1.4rem;
+      vertical-align: middle;
+    }
+
+    /* Launch app section */
+    .launching-app-section {
+      max-width: 700px;
+      margin: 2rem auto 3rem auto;
+      text-align: center;
+      padding: 0 10px;
+    }
+
+    .launching-app-text {
+      font-family: 'Roboto Condensed', sans-serif;
+      font-size: 1.2rem;
+      color: #333;
       margin-bottom: 1rem;
     }
-    .cta-text a {
-      background: var(--highlight);
+
+    .launch-button {
+      font-family: 'Chewy', cursive;
+      background: var(--green);
       color: white;
       padding: 1rem 2rem;
       border-radius: 1rem;
-      text-decoration: none;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       display: inline-block;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      border: none;
     }
-    .cta-text a:hover {
-      background: #b995c0;
+
+    .launch-button:hover,
+    .launch-button:focus {
+      background-color: #7c865f;
+      outline: none;
     }
-    section {
-      padding: 2rem 1.5rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .intro-section {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 1.5rem;
-      margin-bottom: 3rem;
-      justify-content: space-between;
-    }
-    .intro-text {
-      flex: 1 1 55%;
-      max-width: 60%;
-    }
-    .intro-section img {
-      width: 180px;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 1rem;
-      flex-shrink: 0;
-      order: 2;
-    }
-    .mission-section {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
-    .mission-section h2 {
-      color: var(--primary2);
-      margin-bottom: 0.5rem;
-    }
+
+    /* Events */
     .events-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
-      margin-bottom: 3rem;
-      justify-content: center;
       text-align: center;
+      margin-bottom: 3rem;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 10px;
     }
+
     .events-list h2 {
-      grid-column: 1 / -1;
-      color: var(--primary2);
+      font-family: 'Roboto Condensed', sans-serif;
+      color: #333;
       margin-bottom: 1rem;
-      text-align: center;
     }
-    .event-card {
-      background: var(--secondary1);
-      padding: 1rem;
+
+    .events-list ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1rem;
+      max-width: 800px;
+      justify-items: center;
+    }
+
+    .events-list li {
       border-radius: 1rem;
-      font-weight: 600;
-    }
-    .event-card:nth-child(2) {
-      background: var(--secondary2);
-    }
-    .event-card:nth-child(3) {
-      background: var(--secondary3);
-    }
-    section.contact {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
-    .contact-info {
+      padding: 1rem 1.5rem;
       font-size: 1.1rem;
-      margin-top: 0.5rem;
+      color: #333;
+      max-width: 180px;
+      font-weight: 600;
+      box-sizing: border-box;
+      box-shadow: 0 0 5px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+      cursor: default;
+    }
+    .events-list li:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    }
+
+    .events-list li:nth-child(3n+1) {
+      background-color: var(--event1);
+    }
+
+    .events-list li:nth-child(3n+2) {
+      background-color: var(--event2);
+    }
+
+    .events-list li:nth-child(3n+3) {
+      background-color: var(--event3);
+    }
+
+    /* Contact Us */
+    .contact {
+      text-align: center;
+      max-width: 400px;
+      margin: 0 auto 3rem auto;
+      padding: 0 10px;
+    }
+
+    .contact h2 {
+      font-family: 'Roboto Condensed', sans-serif;
+      color: #333;
+      margin-bottom: 1rem;
+    }
+
+    .social-icons {
       display: flex;
       justify-content: center;
       gap: 2rem;
-      flex-wrap: wrap;
-      align-items: center;
+      margin-top: 1rem;
     }
-    .contact-info a {
-      color: var(--primary2);
-      text-decoration: none;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 0.3rem;
-      font-size: 1.1rem;
+
+    .social-icons a img {
+      width: 32px;
+      height: 32px;
+      vertical-align: middle;
+      filter: grayscale(0);
+      transition: filter 0.2s ease;
     }
-    .contact-info a svg {
-      width: 20px;
-      height: 20px;
-      fill: var(--primary2);
+
+    .social-icons a:hover img,
+    .social-icons a:focus img {
+      filter: grayscale(0.5);
+      outline: none;
     }
+
+    /* Newsletter */
     .newsletter {
-      margin-bottom: 5rem;
+      max-width: 600px;
+      margin: 0 auto 3rem auto;
+      padding: 0 10px;
+    }
+
+    .newsletter h2 {
       text-align: center;
+      font-family: 'Roboto Condensed', sans-serif;
+      margin-bottom: 1rem;
     }
+
     .newsletter form {
-      display: inline-flex;
+      display: flex;
       gap: 0.5rem;
-      max-width: 100%;
-      align-items: center;
       justify-content: center;
-      flex-wrap: nowrap;
+      align-items: center;
     }
+
     .newsletter input[type="email"] {
       flex-grow: 1;
-      padding: 0.75rem;
+      padding: 0.75rem 1rem;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 1rem;
-      max-width: 600px;
+      font-family: 'Roboto Condensed', sans-serif;
       min-width: 0;
     }
+
     .newsletter button[type="submit"] {
-      background: var(--highlight);
-      color: #fff;
+      background: var(--green);
+      color: white;
       border: none;
       cursor: pointer;
-      padding: 0.75rem 1.5rem;
+      padding: 0.75rem 2rem;
       border-radius: 1rem;
-      font-size: 1rem;
-      flex-shrink: 0;
-      min-width: 120px;
+      font-family: 'Chewy', cursive;
+      font-size: 1.1rem;
       transition: background-color 0.3s ease;
     }
-    .newsletter button[type="submit"]:hover {
-      background: #b995c0;
+
+    .newsletter button[type="submit"]:hover,
+    .newsletter button[type="submit"]:focus {
+      background-color: #7c865f;
+      outline: none;
     }
+
+    /* Footer */
     footer {
-      background: var(--background-footer);
+      background: var(--background);
       text-align: center;
       padding: 2rem 1rem;
       font-size: 0.9rem;
       color: #666;
-      margin-top: 5rem;
+      margin-top: 3rem;
     }
+
     footer a {
-      color: #666;
+      color: var(--green);
       text-decoration: none;
       margin: 0 0.5rem;
     }
+
+    footer a:hover,
+    footer a:focus {
+      text-decoration: underline;
+      outline: none;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .events-list ul {
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      }
+      .newsletter form {
+        flex-direction: column;
+        gap: 0.75rem;
+      }
+      .newsletter button[type="submit"] {
+        width: 100%;
+        padding: 1rem 0;
+      }
+    }
+
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" />
 </head>
 <body>
+
   <header>
     <img class="logo" src="https://img1.wsimg.com/isteam/ip/d97c1e45-b522-4f18-a8fe-dfba5028c947/Group%2088.png" alt="LumiNest Logo" />
     <p>Your wellbeing & early childhood development studio</p>
-    <p class="emphasis">A women-led initiative supporting families with autistic children</p>
-
-    <div class="header-bottom">
-      <div class="phone-container">
-        <img
-          class="photo"
-          src="https://images.pexels.com/photos/14465802/pexels-photo-14465802.jpeg"
-          alt="Woman holding phone"
-        />
-        <div class="screen-overlay">new app!</div>
-      </div>
-      <div class="cta-text">
-        <p>We are excited to announce the launch of our app!</p>
-        <a href="#">Download Now!</a>
-      </div>
-    </div>
+    <p>A women-led initiative supporting families with autistic children</p>
   </header>
 
-  <section class="intro-section">
-    <div class="intro-text">
-      <h2>For Parents First</h2>
-      <p>We know the early years with an autistic child can feel overwhelming and beautiful at once. LumiNest offers therapeutic, research-backed digital tools designed specifically for parents raising children between the ages of 2 and 6.</p>
-    </div>
-    <img src="https://images.pexels.com/photos/6338775/pexels-photo-6338775.jpeg?_gl=1*16pfisy*_ga*NDQzNjA2NTkxLjE3NDcwNzE3MzA.*_ga_8JE65Q40S6*czE3NTQxMzM5NjkkbzMkZzEkdDE3NTQxMzQwMjIkajckbDAkaDA." alt="Mother and child talking" />
+  <section class="intro-text" aria-label="Introductory text">
+    <p>
+      <span class="highlight-green">For Parents First</span> - LumiNest offers therapeutic, research-backed digital tools designed specifically for parents raising children between the ages of 2 and 6. We know the early years with an autistic child can feel overwhelming and beautiful at once. For that reason,<br>
+      <span class="highlight-green">our mission</span> is to empower, guide, and comfort families through accessible digital experiences — supporting neurodiversity with love, care, and science.
+    </p>
   </section>
 
-  <section class="mission-section">
-    <h2>Our Mission</h2>
-    <p>To empower, guide, and comfort families through accessible digital experiences — supporting neurodiversity with love, care, and science.</p>
+  <section class="launching-app-section" aria-label="App launch announcement">
+    <p class="launching-app-text">We are excited to announce the launch of our app!</p>
+    <a href="#" class="launch-button" role="button" tabindex="0">Download Now!</a>
   </section>
 
-  <section class="events-list">
+  <section class="events-list" aria-label="Upcoming events">
     <h2>Events</h2>
-    <div class="event-card">Webinar: Sensory Play at Home – Sept 5</div>
-    <div class="event-card">Workshop: Communication Strategies – Oct 12</div>
-    <div class="event-card">Virtual Q&A with Therapists – Nov 9</div>
+    <ul>
+      <li>Webinar: Sensory Play at Home – Sept 5</li>
+      <li>Workshop: Communication Strategies – Oct 12</li>
+      <li>Virtual Q&A with Therapists – Nov 9</li>
+    </ul>
   </section>
 
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-info">
-      <a href="mailto:contact@weareluminest.co.uk" aria-label="Email contact@weareluminest.co.uk">📧 contact@weareluminest.co.uk</a>
-      <a href="https://instagram.com/weareluminest" target="_blank" rel="noopener" aria-label="Instagram @weareluminest">📸 @weareluminest</a>
-      <a href="https://linkedin.com/company/weareluminest" target="_blank" rel="noopener" aria-label="LinkedIn LumiNest">🔗 LumiNest</a>
-    </div>
-  </section>
-
-  <section class="newsletter">
+  <section class="newsletter" aria-label="Newsletter signup">
     <h2>Join Our Newsletter</h2>
     <form>
-      <input type="email" name="newsletter" placeholder="Your email" required />
+      <input type="email" name="newsletter" placeholder="Your email" aria-label="Email address" required />
       <button type="submit">Subscribe</button>
     </form>
   </section>
 
+  <section class="contact" aria-label="Contact information">
+    <h2>Contact Us</h2>
+    <div class="social-icons">
+      <a href="mailto:contact@weareluminest.co.uk" aria-label="Email">
+        <img src="https://cdn-icons-png.flaticon.com/512/2549/2549872.png" alt="Email icon" />
+      </a>
+      <a href="https://instagram.com/weareluminest" target="_blank" rel="noopener" aria-label="Instagram">
+        <img src="https://cdn-icons-png.flaticon.com/512/1567/1567891.png" alt="Instagram icon" />
+      </a>
+      <a href="https://linkedin.com/company/weareluminest" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn icon" />
+      </a>
+    </div>
+  </section>
+
   <footer>
     &copy; 2025 LumiNest. All rights reserved. Women-led. Therapeutically designed in the UK. <br />
-    <a href="#">Privacy Policy</a> | <a href="#">Terms</a> | Follow us on <a href="#">Instagram</a> and <a href="#">LinkedIn</a>
+    <a href="#">Privacy Policy</a> | <a href="#">Terms</a> | Follow us on <a href="https://instagram.com/weareluminest" target="_blank" rel="noopener">Instagram</a> and <a href="https://linkedin.com/company/weareluminest" target="_blank" rel="noopener">LinkedIn</a>
   </footer>
+
 </body>
 </html>
